fix layout first page on mobile

--- a/style.css
+++ b/style.css
@@ -104,6 +104,10 @@ body{
 .logo{font-family:"Didot",serif; font-style:italic; font-size:22px;}
 
 @media (max-width: 420px)  {
+    .row {
+    flex-direction: column;     /* ซ้อนเป็นแนวตั้ง */
+    align-items: center;
+  }
     .avatar {
     flex:1;
     max-width:120px;
@@ -112,7 +116,8 @@ body{
     border-radius:999px;
     overflow:hidden;
     border:6px dotted #fff;
-    align-items:center;
-    justify-content: center;
+  }
+  .right {
+    width: 100%;                /* keypad กว้างเต็มจอ */
   }
 }
